<resources>
    <string name="app_name">petvully</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- bottom nav -->
    <string name="bottom_nav_home">홈</string>
    <string name="bottom_nav_adopt">분양</string>
    <string name="bottom_nav_donate">기부</string>
    <string name="bottom_nav_mypage">마이불리</string>

    <!-- sign in -->
    <string name="sign_in_introduction1">내 손안에 펫불리기</string>
    <string name="sign_in_introduction2">펫불리</string>
    <string name="sign_in_introduction3">에서 함께 해주세요</string>
    <string name="sign_in_enter_id">아이디 입력하기</string>
    <string name="sign_in_enter_pw">비밀번호 입력하기</string>
    <string name="sign_in_login">로그인</string>
    <string name="sign_in_find">아이디 찾기 / 비밀번호 찾기 /</string>
    <string name="sign_in_register">회원가입</string>

    <!-- sign up -->
    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_id">아이디</string>
    <string name="sign_up_id_explanation">영문 소문자와 숫자만 사용하며, 영문 소문자로 시작하는 4~12자의 \n아이디를 입력해주세요.</string>
    <string name="sign_up_pw">비밀번호</string>
    <string name="sign_up_pw_check">비밀번호</string>
    <string name="sign_up_pw_explanation">영문 대문자와 소문자, 숫자, 특수문자 중 2가지 이상을 조합하여 6~20자로 입력해주세요.</string>
    <string name="sign_up_phone">휴대폰 번호</string>
    <string name="sign_up_verification">인증번호 받기</string>
    <string name="sign_up_nickname">닉네임</string>
    <string name="sign_up_check">중복확인</string>
    <string name="sign_up_register">가입하기</string>

    <!-- adoption -->
    <string name="adoption_title">분양불리</string>
    <string name="adoption_find">내 주변 펫불리를 찾아 보세요 ❣</string>
    <string name="adoption_search">검색해주세요.</string>
    <string name="adoption_title1">입양공고 날짜가 얼마 남지 않았어요 😢</string>
    <string name="adoption_title2">집사님을 기다리고 있어요 🙌🏻</string>
    <string name="adoption_my_location">내위치</string>

    <!-- search -->
    <string name="adopt">버려지고 유기된 반려동물들을 직접 검색해서 불러보세요.\n불려진 반려동물들은 안락사 위기를 벗어나고,\n보호소에 후원금이 전달됩니다 ! </string>
    <string name="donate">버려지고 유기된 반려동물들을 직접 키워 얻은 불리코인으로\n내가 불러온 유기 보호소에 직접 물품 후원을 해보세요!\n물품을 보내 투명한 기부 생활을 하실 수 있습니다.\n전달된 물품은 보호소 홈페이지나, 메세지로 인증사진이 전송되며\n기부내역 인증서 발급도 도와드릴게요!</string>

    <!-- home -->
    <string name="home_appbar_hello">안녕하세요\n%s 집사님!</string>
    <string name="home_appbar_subtitle">오늘의 펫불리기가 있어요</string>



    <string-array name="home_chat_before">
        <item>반가워요 집사 🐾</item>
        <item>쓰다듬어 주세요👋🏻</item>
        <item>꼬질꼬질 냄새가 나요💩</item>
    </string-array>
    <string-array name="home_chat_ing">
        <item>쓰담 쓰담 ..💞</item>
        <item>뽀득뽀글 뽀득뽀글🧼</item>
    </string-array>
    <string-array name="home_chat_after">
        <item>너무 행복해요 ❣</item>
    </string-array>

</resources>