<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.sign.SignInActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_intro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/sign_in_introduction1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_intro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/sign_in_introduction2"
        android:textColor="@color/color_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_intro3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_intro1" />

    <TextView
        android:id="@+id/tv_intro3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/sign_in_introduction3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_intro2"
        app:layout_constraintTop_toTopOf="@+id/tv_intro2" />

    <EditText
        android:id="@+id/et_enter_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_round_gray"
        android:elevation="1dp"
        android:fontFamily="@font/notosanskr_medium"
        android:gravity="center"
        android:hint="@string/sign_in_enter_id"
        android:includeFontPadding="false"
        android:padding="13dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/et_enter_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_enter_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_round_gray"
        android:elevation="1dp"
        android:fontFamily="@font/notosanskr_medium"
        android:gravity="center"
        android:hint="@string/sign_in_enter_pw"
        android:includeFontPadding="false"
        android:padding="13dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/bg_round_pink"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/sign_in_login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sign_in_find"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_register"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_find"
        app:layout_constraintTop_toTopOf="@+id/tv_find" />

</androidx.constraintlayout.widget.ConstraintLayout>