<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.sign.SignInActivity">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/sign_up_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/light_gray2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/notosanskr_medium"
        android:text="@string/sign_up_id"
        android:includeFontPadding="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_medium"
        android:layout_marginTop="10dp"
        android:includeFontPadding="false"
        android:padding="13dp"
        android:textSize="15sp"
        android:maxLines="1"
        android:singleLine="true"
        android:elevation="1dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/bg_round_gray"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/btn_id_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <ImageView
        android:id="@+id/iv_id_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancel"
        android:layout_marginEnd="13dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_id"
        app:layout_constraintEnd_toEndOf="@+id/et_id"
        app:layout_constraintTop_toTopOf="@+id/et_id" />

    <Button
        android:id="@+id/btn_id_check"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bg_round_dark_gray"
        app:layout_constraintBottom_toBottomOf="@+id/et_id"
        android:text="@string/sign_up_check"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingHorizontal="28dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_id"
        app:layout_constraintTop_toTopOf="@+id/et_id" />

    <TextView
        android:id="@+id/tv_id_explanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/notosanskr_medium"
        android:text="@string/sign_up_id_explanation"
        android:textColor="@color/light_gray3"
        android:textSize="12sp"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_id" />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/sign_up_pw"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_explanation" />

    <EditText
        android:id="@+id/et_pw1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/bg_round_gray"
        android:elevation="1dp"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:padding="13dp"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColorHint="@color/light_gray4"
        android:hint="@string/sign_up_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pw" />

    <EditText
        android:id="@+id/et_pw2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round_gray"
        android:elevation="1dp"
        android:fontFamily="@font/notosanskr_medium"
        android:hint="@string/sign_up_pw_check"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:padding="13dp"
        android:singleLine="true"
        android:textColorHint="@color/light_gray4"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pw1" />

    <TextView
        android:id="@+id/tv_pw_explanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/sign_up_id_explanation"
        android:textColor="@color/light_gray3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pw2" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/sign_up_phone"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pw_explanation" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_medium"
        android:layout_marginTop="10dp"
        android:includeFontPadding="false"
        android:padding="13dp"
        android:maxLines="1"
        android:singleLine="true"
        android:elevation="1dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/bg_round_gray"
        android:textSize="16sp"
        android:textColorHint="@color/light_gray4"
        android:hint="@string/sign_up_phone"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/btn_phone_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <Button
        android:id="@+id/btn_phone_check"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bg_round_dark_gray"
        app:layout_constraintBottom_toBottomOf="@+id/et_phone"
        android:text="@string/sign_up_verification"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingHorizontal="28dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_phone"
        app:layout_constraintTop_toTopOf="@+id/et_phone" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/sign_up_nickname"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_medium"
        android:layout_marginTop="10dp"
        android:includeFontPadding="false"
        android:padding="13dp"
        android:textSize="15sp"
        android:maxLines="1"
        android:singleLine="true"
        android:elevation="1dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/bg_round_gray"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/btn_nickname_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nickname" />

    <ImageView
        android:id="@+id/iv_nickname_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancel"
        android:layout_marginEnd="13dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_nickname"
        app:layout_constraintEnd_toEndOf="@+id/et_nickname"
        app:layout_constraintTop_toTopOf="@+id/et_nickname" />

    <Button
        android:id="@+id/btn_nickname_check"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bg_round_dark_gray"
        app:layout_constraintBottom_toBottomOf="@+id/et_nickname"
        android:text="@string/sign_up_check"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingHorizontal="28dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_nickname"
        app:layout_constraintTop_toTopOf="@+id/et_nickname" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded_top"
        android:text="@string/sign_up_register"
        android:textSize="24sp"
        android:includeFontPadding="false"
        android:paddingVertical="20dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>